# hackathon

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  pyproject.toml
assets/: ascii-art-thresholding.txt  ascii-art.txt
docs/: cot-schema.md  dev-guide-to-cot.txt  lxdr-protocol.md  mctp-340b.txt  project-adrian.txt
docs/aws-serverless-tak/: .gitignore  cdk.json  package.json
docs/pytak/examples/: tls_send.py
lxdr/: aliases.go  codec.go  codec_test.go  lifecycle.go  lifecycle_test.go  link.go  link_exchange.go  link_match.go  lxdr.pb.go  router.go  router_test.go  sync.go  types.go  wire.go  wire_test.go
lxdr/testdata/: appendix_f_header_registry.textproto  cargo_example.txt  header_example.txt  pax_example.txt  sync_response_example.txt
proto/lxdr/v1/: lxdr.proto
references/: maradmin.txt
references/aws-serverless-tak/: README.md  config.example.yaml  package-lock.json
references/aws-serverless-tak/tak-server/: Dockerfile  start.sh
references/pytak/examples/: tls_send_with_enrollment.py
src/forgenet/: __init__.py  app.py  config.py
src/forgenet/domain/: __init__.py  models.py
src/forgenet/services/: __init__.py
src/forgenet/storage/: __init__.py  db.py  seed.py  tables.py
src/forgenet/transport/: __init__.py  cot.py  runtime.py  store.py
src/forgenet/tui/: __init__.py  app.py  data.py
src/forgenet/web/: __init__.py
src/section4/: __init__.py  app.py  config.py  supportability.py
tests/: __init__.py  test_lxdr_link.py  test_lxdr_router.py  test_lxdr_router_store.py  test_supportability_status.py  test_tui_app.py
(+53 files in other folders)
