[project]
name = "forgenet"
version = "0.1.0"
description = "ForgeNet ALOC node for logistics workflows with a local TUI and PyTAK transport."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.0,<4.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pytak>=7.0.2,<8.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "urwid>=2.6.16,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forgenet"]

[tool.ruff]
target-version = "py312"
line-length = 80
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
